unit_tests/preprocessor/errors/redefinition.correct
preprocessor/errors/redefinition:2: warning: 'x' already defined
